--- a/git.css
+++ b/git.css
@@ -2,3 +2,15 @@ body
 {
     background-color: cyan;
 }
+h1
+{
+    color: violet;
+    text-align:center;
+
+}
+p
+{
+    font-family: "Times New Roman";
+    font-size: 20px;
+    text-align；center;
+}
